--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@shopify/restyle": "^2.4.4",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-native": "0.74.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-svg": "^15.2.0"
+    "react-native-svg": "^15.2.0",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
