--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
       "@hooks": ["src/hooks"],
       "@routes": ["src/routes"],
       "@screens": ["src/screens"],
-      "@theme": ["src/theme"]
+      "@theme": ["src/theme"],
+      "@domain": ["src/domain"],
+      "@brand": ["src/brand"]
     }
   }
 }
