--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@shopify/restyle": "^2.4.4",
+    "axios": "^1.7.2",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-native": "0.74.0",
