--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
       "@screens": ["src/screens"],
       "@theme": ["src/theme"],
       "@domain": ["src/domain"],
-      "@brand": ["src/brand"]
+      "@brand": ["src/brand"],
+      "@api": ["src/api"],
+      "@types": ["src/types"]
     }
   }
 }
