--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "art:3333": "adb reverse tcp:3333 tcp:3333"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -17,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@shopify/restyle": "^2.4.4",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-native": "0.74.0",
