feat: add Estado Global Assíncrono com TanStack Query v4

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@shopify/restyle": "^2.4.4",
+    "@tanstack/react-query": "4.32.6",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "react": "18.2.0",
@@ -36,6 +37,7 @@
     "@react-native/eslint-config": "0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
+    "@tanstack/eslint-plugin-query": "4",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
