--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "react-native start",
     "test": "jest",
     "prepare": "husky install",
-    "art:3333": "adb reverse tcp:3333 tcp:3333"
+    "art:3333": "adb reverse tcp:3333 tcp:3333",
+    "ap": "adb shell input text"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -23,6 +25,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-native": "0.74.0",
+    "react-native-mmkv": "^2.10.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.2.0",
