--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --verbose",
+    "coverage": "jest --verbose --coverage",
     "prepare": "husky install",
     "art:3333": "adb reverse tcp:3333 tcp:3333",
     "ap": "adb shell input text"
@@ -41,6 +42,7 @@
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
     "@tanstack/eslint-plugin-query": "4",
+    "@testing-library/react-native": "^12.8.1",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
