--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "react-native start",
     "test": "jest --verbose",
     "coverage": "jest --verbose --coverage",
-    "prepare": "husky install",
+    "prepare": "husky",
     "art:3333": "adb reverse tcp:3333 tcp:3333",
     "ap": "adb shell input text"
   },
@@ -50,7 +50,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "eslint-plugin-import": "^2.29.1",
-    "husky": "^9.0.11",
+    "husky": "^9.1.7",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
